test-data/elab/fun-expr/not-enough-params.snapshot
exit status: 0

stdout = """
(fun(x : Int) => #error) : Int -> Bool -> Char

"""

stderr = """
error: Type mismatch: expected `Bool -> Char`, found `Int`
  ┌─ test-data/elab/fun-expr/not-enough-params.pion:1:19
  │
1 │ #check (fun(x) => x) : Int -> Bool -> Char;
  │                   ^


"""
